[package]
name = "indexa"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"

description = "A locate alternative with incremental search"
repository = "https://github.com/mosmeh/indexa"
documentation = "https://github.com/mosmeh/indexa"
homepage = "https://github.com/mosmeh/indexa"

readme = "README.md"
license-file = "LICENSE"
categories = ["command-line-utilities"]
keywords = ["search", "files", "command-line"]
exclude = [
    "/assets",
    "/config"
]

[lib]
name = "indexa"
path = "src/lib.rs"

[[bin]]
name = "ix"
path = "src/bin/ix/main.rs"
doc = false
required-features = ["app"]

[features]
default = ["app"]
app = [
    "anyhow",
    "bincode",
    "cassowary",
    "chrono",
    "crossbeam-channel",
    "crossterm",
    "dialoguer",
    "dirs",
    "num_cpus",
    "size",
    "structopt",
    "toml",
    "tui",
    "unicode-segmentation",
    "unicode-width"
]

[dependencies]
anyhow = { version = "1.0.56", optional = true }
bincode = { version = "1.3.3", optional = true }
camino = { version = "1.0.7", features = ["serde1"] }
cassowary = { version = "0.3.0", optional = true }
chrono = { version = "0.4.19", optional = true }
crossbeam-channel = { version = "0.5.2", optional = true }
crossterm = { version = "0.22.1", optional = true }
dialoguer = { version = "0.10.0", optional = true }
dirs = { version = "4.0.0", optional = true }
dunce = "1.0.2"
enum-map = { version = "2.0.3", features = ["serde"] }
fxhash = "0.2.1"
hashbrown = { version = "0.12.0", features = ["inline-more"], default-features = false }
itertools = "0.10.3"
num_cpus = { version = "1.13.1", optional = true }
parking_lot = "0.12.0"
rayon = "1.5.1"
regex = "1.5.5"
regex-syntax = "0.6.25"
serde = { version = "1.0.136", features = ["derive"] }
size = { version = "0.1.2", optional = true }
structopt = { version = "0.3.26", optional = true }
strum = "0.24.0"
strum_macros = "0.24.0"
thiserror = "1.0.30"
thread_local = "1.1.4"
toml = { version = "0.5.8", optional = true }
tui = { version = "0.17.0", optional = true }
unicode-segmentation = { version = "1.9.0", optional = true }
unicode-width = { version = "0.1.9", optional = true }

[dev-dependencies]
tempfile = "3.3.0"

[profile.release]
lto = true
codegen-units = 1
